objects/GenAIFeedbackDetail__dlm.object
<CustomObject>
    <fields>
        <fullName>KQ_feedbackDetailId__c</fullName>
        <label>Key Qualifier Feedback Detail Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_parent__c</fullName>
        <label>Key Qualifier Parent</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appFeedback__c</fullName>
        <label>App Feedback</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloud__c</fullName>
        <label>Cloud</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>feature__c</fullName>
        <label>Feature</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>feedbackDetailId__c</fullName>
        <label>Feedback Detail Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>feedbackText__c</fullName>
        <label>Feedback Text</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>orgId__c</fullName>
        <label>Org Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>parent__c</fullName>
        <label>Parent</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rel_1753303723498_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GenAIFeedbackDetail_parent_map_GenAI_rel</label>
        <referenceTo>GenAIFeedback__dlm</referenceTo>
        <relationshipLabel>GenAIFeedbackDetail_parent_map_GenAI_rel</relationshipLabel>
        <relationshipName>rel_1753303723498_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
</CustomObject>